--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    test
+    
     <div id="root"></div>
   </body>
 </html>
